--- a/style.css
+++ b/style.css
@@ -571,16 +571,26 @@ footer{
         height: 100vh;
         width: 600px;
     }
+    .top-header h1 {
+        margin-top: 50px;
+    }
     .featured-text{
         width: 100%;
         order: 1;
         justify-content: left;
-        align-items: start;
+        align-items: flex-start;
+        align-self: start;
         min-height: 0vh;
         width: 60%;
     }
     .social-icons{
         margin-top: 2em;
+    }
+    .featured-info{
+       padding-right: 33px;
+    }
+    .featured-info p{
+        font-size: 12px;
     }
 
     .images {
@@ -599,6 +609,9 @@ footer{
             transform: translateY(10px);
             border-radius: 5% 5% 5% 5% ;
         }
+    }
+    .btn{
+        margin-right: 20px;
     }
       .top-header {
         margin-bottom: 1rem; 
@@ -650,6 +663,7 @@ z-index: 12;
     .project-box {
         width: 70%;
         background-color: var(--second-color);
+        color: #fff;
     }
     .project-container {
         width: 100%;
