--- a/style.css
+++ b/style.css
@@ -577,7 +577,7 @@ footer{
         width: 85%;
     }
     .social-icons{
-        margin-top: 2em;
+        margin-top: 0.5rem;
     }
     #naviga{
         position: absolute;
